crates/kula-core/tests/corpus/invalid/rule-06-died-before-born.kula
person zombie name:"Zombie" born:2000-01-01 died:1999-12-31 gender:other
